--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 			</div>
 			<div class="footer-social">
 				<ul>
-					<li><a class="button-vk" href="#">Вконтакте</a></li>
-					<li><a class="button-facebook" href="#">Фейсбук</a></li>
-					<li><a class="button-instagram" href="#">Инстаграм</a></li>
+					<li class="button-vk"><a href="#">Вконтакте</a></li>
+					<li class="button-facebook"><a href="#">Фейсбук</a></li>
+					<li class="button-instagram"><a href="#">Инстаграм</a></li>
 				</ul>
 			</div>
 			<div class="footer-discount">
@@ -168,6 +168,6 @@
 				<button class="button" typ="submit">Отправить</button>
 			</form>			
 			<button class="feedback-close" type="button">Закрыть</button>
-		</section>	
+		</section>
 	</body>
 </html>
