--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Нёрдс</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style-index.css">
+
 	</head>
 	<body>
 		<header class="main-header">
@@ -86,16 +90,16 @@
 				<h4>С 2004 года любим точность во всем:</h4>
 				<ul class="statistics">
 					<li>
-						146<span class="percent">%</span><br>
-						Уровень самоотдачи
+						<span class="number">146</span><span class="percent">%</span><br>
+						<span class="tagging">Уровень самоотдачи</span>
 					</li>
 					<li>
-						100<span class="percent">%</span><br>
-						Соблюдение сроков
+						<span class="number">100</span><span class="percent">%</span><br>
+						<span class="tagging">Соблюдение сроков</span>
 					</li>
 					<li>
-						50<span class="percent">%</span><br>
-						Минимальная предоплата
+						<span class="number">50</span><span class="percent">%</span><br>
+						<span class="tagging">Минимальная предоплата</span>
 					</li>
 				</ul>
 			</section>
@@ -163,7 +167,7 @@
 				</p>
 				<p>
 					<label for="user-letter">Текст письма:</label><br>
-					<textarea id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
+					<textarea class="field-letter" id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
 				</p>
 				<button class="button" typ="submit">Отправить</button>
 			</form>			
