--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style-index.css">
+		<link rel="stylesheet" href="css/style.css">
 
 	</head>
 	<body>
