--- a/catalog.html
+++ b/catalog.html
@@ -27,155 +27,159 @@
 		</header>
 		<main class="container">
 			<h1 class="page-title">Магазин готовых шаблонов</h1>			
-			<section class="filters">
-				<h2 class="visually-hidden">Фильтры товаров</h2>
-				<form class="filter" method="get" action="https://echo.htmlacademy">				
-					<fieldset class="cost-section">
-						<legend>Стоимость:</legend>
-						<button class="cost-button-min" type="button">Минимальная цена</button>
-						<button class="cost-button-max" type="button">Максимальная цена</button>
-						<p class="cost-field">
-							<label>
-								От <input type="text" name="from" value="0">
-							</label>
-							<label>
-								До <input type="text" name="until" value="15 000">
-							</label>
-						</p>
-					</fieldset>
-					<fieldset class="grid-section">
-						<legend>Сетка:</legend>
-						<ul>
-							<li class="filter-option">
-								<input class="visually-hidden filter-input filter-input-checked" type="radio" name="grid" value="adaptive" id="filter-adapt" checked>
-								<label for="filter-adapt">Адаптиваная</label>
-							</li>
-							<li class="filter-option">
-								<input class="visually-hidden filter-input" type="radio" name="grid" value="fixed" id="filter-fixed">
-								<label for="filter-fixed">Фиксировання</label>
-							</li>
-							<li class="filter-option">
-								<input class="visually-hidden filter-input" type="radio" name="grid" value="rubber" id="filter-rubber">
-								<label for="filter-rubber">Резиновая</label>
-							</li>
-						</ul>
-					</fieldset>
-					<fieldset class="features-section">
-						<legend>Особенности:</legend>
-						<ul>
-							<li class="filter-option">
-								<input class="visually-hidden filter-input filter-input-checked" type="checkbox" name="slider" id="filter-slider" checked>
-								<label for="filter-slider">Слайдер</label>
-							</li>
-							<li class="filter-option">
-								<input class="visually-hidden filter-input" type="checkbox" name="block" id="filter-block">
-								<label for="filter-block">Блок преимуществ</label>
-							</li>
-							<li class="filter-option">
-								<input class="visually-hidden filter-input filter-input-checked" type="checkbox" name="news" id="filter-news" checked>
-								<label for="filter-news">Новости</label>					
-							</li>
-							<li class="filter-option">
-								<input class="visually-hidden filter-input" type="checkbox" name="gallery" id="filter-gallery">
-								<label for="filter-gallery">Галерея</label>
-							</li>
-							<li class="filter-option">
-								<input class="visually-hidden filter-input" type="checkbox" name="basket" id="filter-basket">
-								<label for="filter-basket">Корзина</label>
-							</li>						
-						</ul>
-					</fieldset>
-					<button type="submit" class="filter-button">Показать</button>
-				</form>	
-			</section>
+			
 			<div class="sort">
 				<h2>Сортировать:</h2>
 				<ul class="sort-list">
 					<li class="sort-price-current"><a>По цене</a></li>
 					<li class="sort-type"><a href="#">По типу</a></li>
 					<li class="sort-name"><a href="#">По названию</a></li> 
-				</ul>	
-				<ul clas="sort-kind">
-					<li class="sort-down"><a href="#">По убыванию</li>
+				</ul>
+				<ul class="sort-kind">
+					<li class="sort-down"><a href="#">По убыванию</a></li>
 					<li class="sort-up-current"><a>По возрастанию</a></li>
 				</ul>
 			</div>
-			<section class="templates">
-				<h2 class="visually-hidden">Каталог шаблонов</h2>
-				<ul class="template-list">
-					<li class="sedona-item">
-						<h4><a href="#">Sedona</a></h4>
-						<p class="about">Инофрмационный сайт<br>
-						для туристов</p>
-						<p class="image">
-							<img src="img/sedona-template.jpg" width="360" height="576" alt="Шаблон Седона">
-						</p> 
-						<p class="button-orders"> 
-							<button class="btn-order button-order1" type="button">9 900 <span>руб.</span></button>
-						</p>
-					</li>
-					<li class="pink-item">
-						<h4><a href="#">Pink app</a></h4>
-						<p class="about">Продуктовый лендинг<br>
-						приложения для iOS и Android</p>
-						<p class="image">
-							<img src="img/pink-template.jpg" width="360" height="576" alt="Шаблон Pink app">
-						</p>
-						<p class="button-orders"> 
-							<button class="btn-order button-order2" type="button">9 900 <span>руб.</span></button>
-						</p>
-					</li>
-					<li class="barbershop-item">
-						<h4><a href="#">Barbershop</a></h4>
-						<p class="about">Сайт салоны красоты.<br>
-						Для мужчин, да</p>
-						<p class="image">
-							<img src="img/barbershop-template.jpg" width="360" height="576" alt="Шаблон Барбершопа">
-						</p>
-						<p class="button-orders"> 
-							<button class="btn-order button-order3" type="button">9 900 <span>руб.</span></button>
-						</p>
-					</li>
-					<li class="mishka-item">
-						<h4><a href="#">Mishka</a></h4>
-						<p class="about">Интернет-магазин<br>
-						вязаных игрушек</p>
-						<p class="image">
-							<img src="img/mishka-template.jpg" width="360" height="576" alt="Шаблон интернет-магазина вязаных игрушек">
-						</p>
-						<p class="button-orders"> 
-							<button class="btn-order button-order4" type="button">9 900 <span>руб.</span></button>
-						</p>
-					</li> 				
-					<li class="aplus-item">
-						<h4><a href="#">A plus</a></h4>
-						<p class="about">Лендинг курсов повышения<br>квалификации</p>
-						<p class="image">
-							<img src="img/aplus-template.jpg" width="360" height="576" alt="Шаблон A plus">
-						</p>
-						<p class="button-orders"> 
-							<button class="btn-order button-order5" type="button">9 900 <span>руб.</span></button>
-						</p>
-					</li>
-					<li class="kvast-item">
-						<h4><a href="#">Кваст</a></h4>
-						<p class="about">Промо-сайт производителя<br>крафтового кваса</p>
-						<p class="image">
-							<img src="img/kvast-template.jpg" width="360" height="576" alt="Шаблон Промо-сайта производителя крафтового кваса">
-						</p>
-						<p class="button-orders"> 
-							<button class="btn-order button-order6" type="button">9 900 <span>руб.</span></button>
-						</p>
-					</li>
-				</ul>
-				<h2 class="visually-hidden">Ссылки на сраницы</h2>
-				<ul class="pagination-list">
-					<li class="pagination-item-current"><a>1</a></li>
-					<li class="pagination-item"><a href="#">2</a></li>
-					<li class="pagination-item"><a href="#">3</a></li>
-					<li class="pagination-item"><a href="#">Следующая</a></li>
-				</ul>
-			</section>
+
+			<div class="catalog-columns">
+				<section class="filters">
+					<h2 class="visually-hidden">Фильтры товаров</h2>
+					<form class="filter" method="get" action="https://echo.htmlacademy">				
+						<fieldset class="cost-section">
+							<legend>Стоимость:</legend>
+							<button class="cost-button-min" type="button">Минимальная цена</button>
+							<button class="cost-button-max" type="button">Максимальная цена</button>
+							<p class="cost-field">
+								<label>
+									От <input type="text" name="from" value="0">
+								</label>
+								<label>
+									До <input type="text" name="until" value="15 000">
+								</label>
+							</p>
+						</fieldset>
+						<fieldset class="grid-section">
+							<legend>Сетка:</legend>
+							<ul>
+								<li class="filter-option">
+									<input class="visually-hidden filter-input filter-input-checked" type="radio" name="grid" value="adaptive" id="filter-adapt" checked>
+									<label for="filter-adapt">Адаптиваная</label>
+								</li>
+								<li class="filter-option">
+									<input class="visually-hidden filter-input" type="radio" name="grid" value="fixed" id="filter-fixed">
+									<label for="filter-fixed">Фиксировання</label>
+								</li>
+								<li class="filter-option">
+									<input class="visually-hidden filter-input" type="radio" name="grid" value="rubber" id="filter-rubber">
+									<label for="filter-rubber">Резиновая</label>
+								</li>
+							</ul>
+						</fieldset>
+						<fieldset class="features-section">
+							<legend>Особенности:</legend>
+							<ul>
+								<li class="filter-option">
+									<input class="visually-hidden filter-input filter-input-checked" type="checkbox" name="slider" id="filter-slider" checked>
+									<label for="filter-slider">Слайдер</label>
+								</li>
+								<li class="filter-option">
+									<input class="visually-hidden filter-input" type="checkbox" name="block" id="filter-block">
+									<label for="filter-block">Блок преимуществ</label>
+								</li>
+								<li class="filter-option">
+									<input class="visually-hidden filter-input filter-input-checked" type="checkbox" name="news" id="filter-news" checked>
+									<label for="filter-news">Новости</label>					
+								</li>
+								<li class="filter-option">
+									<input class="visually-hidden filter-input" type="checkbox" name="gallery" id="filter-gallery">
+									<label for="filter-gallery">Галерея</label>
+								</li>
+								<li class="filter-option">
+									<input class="visually-hidden filter-input" type="checkbox" name="basket" id="filter-basket">
+									<label for="filter-basket">Корзина</label>
+								</li>						
+							</ul>
+						</fieldset>
+						<button type="submit" class="filter-button">Показать</button>
+					</form>	
+				</section>
+				<section class="templates">
+					<h2 class="visually-hidden">Каталог шаблонов</h2>
+					<ul class="template-list">
+						<li class="sedona-item">
+							<h4><a href="#">Sedona</a></h4>
+							<p class="about">Инофрмационный сайт<br>
+							для туристов</p>
+							<p class="image">
+								<img src="img/sedona-template.jpg" width="360" height="576" alt="Шаблон Седона">
+							</p> 
+							<p class="button-orders"> 
+								<button class="btn-order button-order1" type="button">9 900 <span>руб.</span></button>
+							</p>
+						</li>
+						<li class="pink-item">
+							<h4><a href="#">Pink app</a></h4>
+							<p class="about">Продуктовый лендинг<br>
+							приложения для iOS и Android</p>
+							<p class="image">
+								<img src="img/pink-template.jpg" width="360" height="576" alt="Шаблон Pink app">
+							</p>
+							<p class="button-orders"> 
+								<button class="btn-order button-order2" type="button">9 900 <span>руб.</span></button>
+							</p>
+						</li>
+						<li class="barbershop-item">
+							<h4><a href="#">Barbershop</a></h4>
+							<p class="about">Сайт салоны красоты.<br>
+							Для мужчин, да</p>
+							<p class="image">
+								<img src="img/barbershop-template.jpg" width="360" height="576" alt="Шаблон Барбершопа">
+							</p>
+							<p class="button-orders"> 
+								<button class="btn-order button-order3" type="button">9 900 <span>руб.</span></button>
+							</p>
+						</li>
+						<li class="mishka-item">
+							<h4><a href="#">Mishka</a></h4>
+							<p class="about">Интернет-магазин<br>
+							вязаных игрушек</p>
+							<p class="image">
+								<img src="img/mishka-template.jpg" width="360" height="576" alt="Шаблон интернет-магазина вязаных игрушек">
+							</p>
+							<p class="button-orders"> 
+								<button class="btn-order button-order4" type="button">9 900 <span>руб.</span></button>
+							</p>
+						</li> 				
+						<li class="aplus-item">
+							<h4><a href="#">A plus</a></h4>
+							<p class="about">Лендинг курсов повышения<br>квалификации</p>
+							<p class="image">
+								<img src="img/aplus-template.jpg" width="360" height="576" alt="Шаблон A plus">
+							</p>
+							<p class="button-orders"> 
+								<button class="btn-order button-order5" type="button">9 900 <span>руб.</span></button>
+							</p>
+						</li>
+						<li class="kvast-item">
+							<h4><a href="#">Кваст</a></h4>
+							<p class="about">Промо-сайт производителя<br>крафтового кваса</p>
+							<p class="image">
+								<img src="img/kvast-template.jpg" width="360" height="576" alt="Шаблон Промо-сайта производителя крафтового кваса">
+							</p>
+							<p class="button-orders"> 
+								<button class="btn-order button-order6" type="button">9 900 <span>руб.</span></button>
+							</p>
+						</li>
+					</ul>
+					<h2 class="visually-hidden">Ссылки на сраницы</h2>
+					<ul class="pagination-list">
+						<li class="pagination-item-current"><a>1</a></li>
+						<li class="pagination-item"><a href="#">2</a></li>
+						<li class="pagination-item"><a href="#">3</a></li>
+						<li class="pagination-item"><a href="#">Следующая</a></li>
+					</ul>
+				</section>
+			</div>	
 		</main>
 		<footer class="main-footer">
 			<div class="map">
