Исправленная сетка главной

--- a/index.html
+++ b/index.html
@@ -31,23 +31,36 @@
 			<section class="sliders">
 				<h2 class="visually-hidden">Слайдер</h2>
 				<ul class="sliders-list">
-					<li class="slider1">
-						<img src="img/slide1.png" width="698" height="413" alt="Два телефона">
-						<h3>Долго, дорого, скрупулезно</h3>
-						<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-						<a href="#">Узнать больше</a>
+					<li class="slider-colums slider1">
+						<div class="slider-img">
+							<img src="img/slide1.png" width="698" height="413" alt="Два телефона">
+						</div>
+						<div class="slider-left">
+							<h3>Долго, дорого, скрупулезно</h3>
+							<p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+							<a href="#">Узнать больше</a>
+						</div>
 					</li>
-					<li class="slider2">
-						<img src="img/slide2.png" width="698" height="413" alt="Два компьютера">
-						<h3>Любим математику как никто другой</h3>
-						<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-						<a href="catalog.html">Узнать больше</a>
+					<li class="slider-colums slider2">
+						<div class="slider-img">
+							<img src="img/slide2.png" width="698" height="413" alt="Два компьютера">
+						</div>
+						<div class="slider-left">	
+							<h3>Любим математику как никто другой</h3>
+							<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+							<a href="catalog.html">Узнать больше</a>
+						</div>
 					</li>
-					<li class="slider3">
-						<img src="img/slide3.png" width="698" height="413" alt="Планшет и телефон">
-						<h3>Только ночь, только хардкор</h3>
-						<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-						<a href="catalog.html">Узнать больше</a>
+
+					<li class="slider-colums slider3">
+						<div class="slider-img">
+							<img src="img/slide3.png" width="698" height="413" alt="Планшет и телефон">
+						</div>
+						<div class="slider-left">
+							<h3>Только ночь, только хардкор</h3>
+							<p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+							<a href="catalog.html">Узнать больше</a>
+						</div>
 					</li>
 				</ul>
 			</section>
@@ -74,7 +87,7 @@
 					</li>
 				</ul>
 			</section> 
-			<div class="index-colums">
+			<div class="about-colums">
 				<section class="about">
 					<h2 class="visually-hidden">О студии</h2> 		
 					<p class="slogan"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
@@ -115,17 +128,17 @@
 					</li>
 					<li>
 						<a href="borodinski.html">
-							<img src="img/logo-barbershop.png" width="199" height="68" alt="Барбершоп">
+							<img src="img/logo-barbershop.png" width="209" height="90" alt="Барбершоп">
 						</a>
 					</li>
 					<li>
 						<a href="pink.html">
-							<img src="img/logo-pink.png" width="199" height="68" alt="PINK">
+							<img src="img/logo-pink.png" width="185" height="52" alt="PINK">
 						</a>
 					</li>
 					<li>
 						<a href="mishka.html">
-							<img src="img/logo-mishka.png" width="199" height="68" alt="MISHKA">
+							<img src="img/logo-mishka.png" width="173" height="84" alt="MISHKA">
 						</a>
 					</li>
 				</ul>
