--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
 					<li><a href="contacts.html">Контакты</a></li>
 				</ul>
 				<ul class="basket-link">
-					<li><a href="#">Корзина</a></li> 
+					<li class="basket"><a href="#">Корзина</a></li> 
 				</ul>
 			</nav>
 		</header>
@@ -119,7 +119,7 @@
 					<ul class="template-list">
 						
 							<li class="sedona-item catalog-item">
-								<p class="sedona-image">
+								<p class="sedona-image image">
 									<img src="img/sedona-template.jpg" width="360" height="576" alt="Шаблон Седона">
 								</p> 
 								<div class="about-sedona about-item">
@@ -133,59 +133,77 @@
 							</li>
 
 						<li class="pink-item catalog-item">
-							<h4><a href="#">Pink app</a></h4>
-							<p class="about-catalog">Продуктовый лендинг<br>
-							приложения для iOS и Android</p>
-							<p class="image">
+							<p class="pink-image image">
 								<img src="img/pink-template.jpg" width="360" height="576" alt="Шаблон Pink app">
 							</p>
-							<p class="button-orders"> 
-								<button class="btn-order button-order2" type="button">9 900 <span>руб.</span></button>
-							</p>
+							<div class="about-pink about-item">
+								<h4><a href="#">Pink app</a></h4>
+								<p class="about-catalog">Продуктовый лендинг<br>
+								приложения для iOS и Android</p>
+								<p class="button-orders"> 
+									<button class="btn-order button-order2" type="button">9 900 <span>руб.</span></button>
+								</p>
+							</div>	
 						</li>
+
 						<li class="barbershop-item catalog-item">
-							<h4><a href="#">Barbershop</a></h4>
-							<p class="about-catalog">Сайт салоны красоты.<br>
-							Для мужчин, да</p>
-							<p class="image">
+							<p class="barbershop-image image">
 								<img src="img/barbershop-template.jpg" width="360" height="576" alt="Шаблон Барбершопа">
 							</p>
-							<p class="button-orders"> 
-								<button class="btn-order button-order3" type="button">9 900 <span>руб.</span></button>
-							</p>
+							<h4><a href="#">Barbershop</a></h4>
+							<div class="about-barbershop about-item">
+								<p class="about-catalog">Сайт салоны красоты.<br>
+								Для мужчин, да</p>
+								<p class="button-orders"> 
+									<button class="btn-order button-order3" type="button">9 900 <span>руб.</span></button>
+								</p>
+							</div>	
 						</li>
+
 						<li class="mishka-item catalog-item">
-							<h4><a href="#">Mishka</a></h4>
-							<p class="about-catalog">Интернет-магазин<br>
-							вязаных игрушек</p>
-							<p class="image">
+							<p class="mishka-image image">
 								<img src="img/mishka-template.jpg" width="360" height="576" alt="Шаблон интернет-магазина вязаных игрушек">
 							</p>
-							<p class="button-orders"> 
-								<button class="btn-order button-order4" type="button">9 900 <span>руб.</span></button>
-							</p>
-						</li> 				
+							<div class="about-mishka about-item">
+								<h4><a href="#">Mishka</a></h4>
+								<p class="about-catalog">Интернет-магазин<br>
+								вязаных игрушек</p>
+								<p class="button-orders"> 
+									<button class="btn-order button-order4" type="button">9 900 <span>руб.</span></button>
+								</p>
+							</div>
+						</li>
+
 						<li class="aplus-item catalog-item">
-							<h4><a href="#">A plus</a></h4>
-							<p class="about-catalog">Лендинг курсов повышения<br>квалификации</p>
-							<p class="image">
+							<p class="aplus-image image">
 								<img src="img/aplus-template.jpg" width="360" height="576" alt="Шаблон A plus">
 							</p>
-							<p class="button-orders"> 
-								<button class="btn-order button-order5" type="button">9 900 <span>руб.</span></button>
-							</p>
+							<div class="about-plus about-item">
+								<h4><a href="#">A plus</a></h4>
+								<p class="about-catalog">Лендинг курсов повышения<br>квалификации</p>
+
+								<p class="button-orders"> 
+									<button class="btn-order button-order5" type="button">9 900 <span>руб.</span></button>
+								</p>
+							</div>
 						</li>
+
 						<li class="kvast-item catalog-item">
-							<h4><a href="#">Кваст</a></h4>
-							<p class="about-catalog">Промо-сайт производителя<br>крафтового кваса</p>
-							<p class="image">
+							<p class="kvast-image image">
 								<img src="img/kvast-template.jpg" width="360" height="576" alt="Шаблон Промо-сайта производителя крафтового кваса">
 							</p>
-							<p class="button-orders"> 
-								<button class="btn-order button-order6" type="button">9 900 <span>руб.</span></button>
-							</p>
+							<div class="about-kvast about-item">
+								<h4><a href="#">Кваст</a></h4>
+								<p class="about-catalog">Промо-сайт производителя<br>крафтового кваса</p>
+								<p class="button-orders"> 
+									<button class="btn-order button-order6" type="button">9 900 <span>руб.</span></button>
+								</p>
+							</div>
 						</li>
 					</ul>
+
+
+
 					<h2 class="visually-hidden">Ссылки на сраницы</h2>
 					<ul class="pagination-list">
 						<li class="pagination-item-current pagination"><a>1</a></li>
@@ -195,6 +213,8 @@
 					</ul>
 				</section>
 			</div>	
+		
+
 		<footer class="main-footer">
 			<div class="map">
 				<h2 class="visually-hidden">Карта</h2>
@@ -211,9 +231,21 @@
 			<div class="footer-colums">
 				<div class="footer-social">
 					<ul class="social-type">
-						<li class="button-vk"><a href="#">Вконтакте</a></li>
-						<li class="button-facebook"><a href="#">Фейсбук</a></li>
-						<li class="button-instagram"><a href="#">Инстаграм</a></li>
+						<li>
+							<a class="button-social" href="#">
+								<img class="button-vk" src="img/vk-icon.svg" alt="Вконтакте" width="26" height="15">
+							</a>
+						</li>
+						<li>
+							<a class="button-social" href="#">
+								<img class="button-facebook" src="img/fb-icon.svg" alt="Фейсбук" width="12" height="22">
+							</a>
+						</li>
+						<li>
+							<a class="button-social" href="#">
+								<img class="button-instagram" src="img/insta-icon.svg" alt="Инстаграм" width="21" height="21">
+							</a>
+						</li>
 					</ul>
 				</div>
 				<div class="footer-discount">
@@ -222,24 +254,26 @@
 				</div>
 			</div>
 		</footer>
-		<section class="feedback">
+		<section class="feedback modal">
 			<form class="letter" action="https://echo.htmlacademy.ru" method="post">
 				<h3>Напишите нам</h3>
-				<p>
-					<label for="user-name">Ваше имя:</label><br>
-					<input class="field-name" id="user-name" name="name" type="text" placeholder="Имя Фамилия">
-				</p>
-				<p>
-					<label for="user-email">Ваш e-mail:</label><br>
-					<input class="field-email" id="user-email" name="email" type="email" placeholder="email@example.com">
-				</p>
+				<div class="feedback-colums">
+					<p>
+						<label class="label-name" for="user-name">Ваше имя:</label><br>
+						<input class="field-name" id="user-name" name="name" type="text" placeholder="Имя Фамилия">
+					</p>
+					<p>
+						<label for="user-email">Ваш e-mail:</label><br>
+						<input class="field-email" id="user-email" name="email" type="email" placeholder="email@example.com">
+					</p>
+				</div>
 				<p>
 					<label for="user-letter">Текст письма:</label><br>
-					<textarea id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
+					<textarea class="field-letter" id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
 				</p>
-				<button class="button" typ="submit">Отправить</button>
+				<button class="button-feedback-sent" typ="submit">Отправить</button>
 			</form>			
 			<button class="feedback-close" type="button">Закрыть</button>
-		</section>	
+		</section>
 	</body>
 </html>
