Итог. Главная страница

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<div class="about-colums">
 				<section class="about">
 					<h2 class="visually-hidden">О студии</h2> 		
-					<p class="slogan"><b>Мы - маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+					<p class="slogan"><b>Мы — маленькая, но гордая дизайн-студия из Краснодара.</b></p>
 					<p class="slogan2">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
 					<h4>Выполняем заказы на разработку:</h4>
 					<ul class="orders">
@@ -154,8 +154,8 @@
 				<h2 class="visually-hidden">Контакты</h2>
 				<h4>Nerds design studio</h4>
 				<p>191186, Санкт-Петербург,<br>
-				ул. Конюшенная, д. 19/8</p>
-				<p>тел. +7(812)275-75-75</p>
+				ул. Б. Конюшенная, д. 19/8</p>
+				<p>тел. +7 (812) 275-75-75</p>
 				<a class="button-letter" href="#">Напишите нам</a>
 			</div>
 			<div class="footer-colums">
