--- a/catalog.html
+++ b/catalog.html
@@ -116,6 +116,11 @@
 						</div>
 					</div>					
 					<h2 class="visually-hidden">Каталог шаблонов</h2>
+					
+
+
+
+
 					<ul class="template-list">
 						
 							<li class="sedona-item catalog-item">
@@ -150,8 +155,8 @@
 							<p class="barbershop-image image">
 								<img src="img/barbershop-template.jpg" width="360" height="576" alt="Шаблон Барбершопа">
 							</p>
-							<h4><a href="#">Barbershop</a></h4>
 							<div class="about-barbershop about-item">
+								<h4><a href="#">BARBERSHOP</a></h4>
 								<p class="about-catalog">Сайт салоны красоты.<br>
 								Для мужчин, да</p>
 								<p class="button-orders"> 
@@ -224,8 +229,8 @@
 				<h2 class="visually-hidden">Контакты</h2>
 				<h4>Nerds design studio</h4>
 				<p>191186, Санкт-Петербург,<br>
-				ул. Конюшенная, д. 19/8</p>
-				<p>тел. +7(812)275-75-75</p>
+				ул. Б. Конюшенная, д. 19/8</p>
+				<p>тел. +7 (812) 275-75-75</p>
 				<a class="button-letter" href="#">Напишите нам</a>
 			</div>
 			<div class="footer-colums">
