--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
 						</div>
 					</li>
 				</ul>
-			</section>  
-
-
+			</section> 
 			<section class="services">
 				<h2 class="visually-hidden">Виды работ</h2>
 				<ul class="services-list">
@@ -189,16 +187,16 @@
 				<h3>Напишите нам</h3>
 				<div class="feedback-colums">
 					<p>
-						<label class="label-name" for="user-name">Ваше имя:</label><br>
+						<label class="label-name" for="user-name">Ваше имя:</label>
 						<input class="field-name" id="user-name" name="name" type="text" placeholder="Имя Фамилия">
 					</p>
 					<p>
-						<label for="user-email">Ваш e-mail:</label><br>
+						<label for="user-email">Ваш e-mail:</label>
 						<input class="field-email" id="user-email" name="email" type="email" placeholder="email@example.com">
 					</p>
 				</div>
 				<p>
-					<label for="user-letter">Текст письма:</label><br>
+					<label for="user-letter">Текст письма:</label>
 					<textarea class="field-letter" id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
 				</p>
 				<button class="button-feedback-sent" typ="submit">Отправить</button>
