Исправил после валидатора

--- a/catalog.html
+++ b/catalog.html
@@ -198,7 +198,8 @@
 						<li class="pagination-item-next pagination"><a href="#">Следующая</a></li>
 					</ul>
 				</section>
-			</div>	
+			</div>
+		</main>	
 		<footer class="main-footer">
 			<div class="map">
 				<h2 class="visually-hidden">Карта</h2>
@@ -252,10 +253,10 @@
 					</p>
 				</div>
 				<p>
-					<label for="user-letter">Текст письма:</label><br>
-					<textarea class="field-letter" id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
+					<label for="user-letter">Текст письма:</label>
+					<textarea class="field-letter" id="user-letter" name="letter" type="text" rows="4" cols="10" placeholder="В свободной форме"></textarea>	
 				</p>
-				<button class="button-feedback-sent" typ="submit">Отправить</button>
+				<button class="button-feedback-sent" type="submit">Отправить</button>
 			</form>			
 			<button class="feedback-close" type="button">Закрыть</button>
 		</section>
