--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 				</div>
 				<p>
 					<label for="user-letter">Текст письма:</label>
-					<textarea class="field-letter" id="user-letter" name="letter" type="text" rows="4" cols="" placeholder="В свободной форме"></textarea>	
+					<textarea class="field-letter" id="user-letter" name="letter" type="text" rows="4" cols="10" placeholder="В свободной форме"></textarea>	
 				</p>
-				<button class="button-feedback-sent" typ="submit">Отправить</button>
+				<button class="button-feedback-sent" type="submit">Отправить</button>
 			</form>			
 			<button class="feedback-close" type="button">Закрыть</button>
 		</section>
