--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 				</div>
 				<p>
 					<label for="user-letter">Текст письма:</label>
-					<textarea class="field-letter" id="user-letter" name="letter" type="text" rows="4" cols="10" placeholder="В свободной форме"></textarea>	
+					<textarea class="field-letter" id="user-letter" name="letter" rows="4" cols="10" placeholder="В свободной форме"></textarea>	
 				</p>
 				<button class="button-feedback-sent" type="submit">Отправить</button>
 			</form>			
